providing more color information

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,13 +2,14 @@
 <html lang="en"> 
 	<head> 
 		<meta charset="utf-8" /> 
-		<title>SCENECHANGE : Slideshows By Location</title> 
-	    <!--[if lt IE 9]>
-	    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	    <![endif]--> 
+		<title>hexpl.us</title> 
+		<link type="text/css" rel="stylesheet" href="media/css/hex.css"/>
 	</head> 
 	<body>
-		hi
+		<label for="hex">Hexadecimal:</label><span id="hex"></span>
+		<label for="decimal">Decimal:</label><span id="decimal"></span>
+		<label for="rgb">RGB:</label><span id="rgb"></span>
+		<label for="short">CSS Shorthand:</label><span id="short"></span>
 		<script type="text/javascript" src="http://www.google.com/jsapi?key=ABQIAAAABYlRyNYUhba29cQamRPQKBR8ulp0qGQo-uK4cerJzxtvcpEfYhQUvUPW8MsKBdPRILeaaD87k6iEfw"></script> 
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script> 
 		<script type="text/javascript" src="media/js/jquery.ba-hashchange.min.js"></script>
