correct information for shorthand hex

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,10 +6,22 @@
 		<link type="text/css" rel="stylesheet" href="media/css/hex.css"/>
 	</head> 
 	<body>
-		<label for="hex">Hexadecimal:</label><span id="hex"></span>
-		<label for="decimal">Decimal:</label><span id="decimal"></span>
-		<label for="rgb">RGB:</label><span id="rgb"></span>
-		<label for="short">CSS Shorthand:</label><span id="short"></span>
+		<h1>hexpl.us</h1>
+		<h2>url-based hex lookup</h2>
+		<div id="description">
+			<label for="hex">Hexadecimal:</label><span id="hex"></span>
+			<label for="decimal">Decimal:</label><span id="decimal"></span>
+			<label for="rgb">RGB:</label><span id="rgb"></span>
+		</div>
+		<p>
+			Enter a hex you want to look up in the url, like <code>http://hexpl.us#ffffaa</code> to see the hex's color, RGB value, and decimal value.
+		</p>
+		<p> 
+			Enter a decimal value beginning with a 't,' like <code>http://hexpl.us#t98</code> to see the hex value. 
+		</p>
+		<p> 
+			Enter a color name, like <code>http://hexpl.us#navy</code> to see the color, RGB value, hex value, and decimal value. 
+		</p>
 		<script type="text/javascript" src="http://www.google.com/jsapi?key=ABQIAAAABYlRyNYUhba29cQamRPQKBR8ulp0qGQo-uK4cerJzxtvcpEfYhQUvUPW8MsKBdPRILeaaD87k6iEfw"></script> 
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script> 
 		<script type="text/javascript" src="media/js/jquery.ba-hashchange.min.js"></script>
