added hosting support

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -23,7 +23,11 @@
 		<label for="query">look up:</label>
 		<input type="text" id="query" title="hex, color name, or decimal value"/>
 		<p>You can look up decimal values by putting a <code>t</code> at the beginning, e.g. <code>t128</code></p>
-		<footer>&copy; 2010 Patrick Boe</footer>
+		<footer>
+		&copy; 2010 Patrick Boe
+		<a href="privacy">Privacy Policy</a>
+		<a href="http://github.com/patrickboe/hexplus">Source Code</a>
+		</footer>
 		<script type="text/javascript" src="http://www.google.com/jsapi?key=$CONF_google_api_key"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 		<script type="text/javascript" src="$CONF_media_loc/js/app-$CONF_version_name.js"></script>
