--- a/src/content/privacy.html
+++ b/src/content/privacy.html
@@ -2,15 +2,23 @@
 <html lang="en"> 
 	<head> 
 		<meta charset="utf-8" />
-		<title>Privacy Policy</title> 
+		<title>hexpl.us: Privacy Policy</title> 
+		<link rel="shortcut icon" type="image/png" href="$CONF_media_loc/images/favicon.png">
+		<link type="text/css" rel="stylesheet" href="$CONF_media_loc/css/hex.css"/> 
 	</head> 
 	<body>
-		<h1>Privacy Policy</h1>
+		<h1>hexpl.us</h1>
+		<h2>Privacy Policy</h2>
 		<p>I do not use this site to collect or store information about you for any purpose.</p>
 		<p>This site does use third party advertising through Google Adsense. Google uses 
 		cookies to serve ads based on a user's prior visits to this website. Google's use 
 		of the DART cookie enables it and its partners to serve ads to users of this site 
 		based on their visit to this site and/or other sites on the Internet. Users may 
 		opt out of the use of the DART cookie by visiting the advertising opt-out page.</p>
+		<footer>
+		&copy; 2010 Patrick Boe
+		<a href="/">Home</a>
+		<a href="http://github.com/patrickboe/hexplus">Source Code</a>
+		</footer>
 	</body>
 </html>
