not changing hash on every query update

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -22,7 +22,8 @@
 			<label for="rgb">RGB:</label> <span id="rgb"></span>
 			</li>
 		</ul>
-		<p>You can look up decimal values by putting a <code>t</code> at the beginning, e.g. <code>t128</code></p>
+		<p>You'll see this same result if you type <a id="lookupUrl" href="http://hexpl.us">http://hexpl.us</a> into your browser.</p>
+		<p>Look up decimal values by putting a <code>t</code> at the beginning, e.g. <code>t128</code></p>
 		<footer>
 		&copy; 2010 Patrick Boe
 		<a href="privacy">Privacy Policy</a>
