--- a/src/content/index.html
+++ b/src/content/index.html
@@ -22,8 +22,19 @@
 			<label for="rgb">RGB:</label> <span id="rgb"></span>
 			</li>
 		</ul>
-		<p>You'll see this same result if you type <a id="lookupUrl" href="http://hexpl.us">http://hexpl.us</a> into your browser.</p>
+		<p>Value URL: <a id="lookupUrl" href="http://hexpl.us">http://hexpl.us</a></p>
 		<p>Look up decimal values by putting a <code>t</code> at the beginning, e.g. <code>t128</code></p>
+		<script type="text/javascript"><!--
+google_ad_client = "ca-pub-4316637065076563";
+/* mainAds */
+google_ad_slot = "5758207380";
+google_ad_width = 468;
+google_ad_height = 60;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 		<footer>
 		&copy; 2010 Patrick Boe
 		<a href="privacy">Privacy Policy</a>
