worked out a flicker bug, adjusted formatting

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -22,7 +22,7 @@
 			<label for="rgb">RGB:</label> <span id="rgb"></span>
 			</li>
 		</ul>
-		<p>Value URL: <a id="lookupUrl" href="http://hexpl.us">http://hexpl.us</a></p>
+		<p>Link to this: <a id="lookupUrl" href="http://hexpl.us">http://hexpl.us</a></p>
 		<p>Look up decimal values by putting a <code>t</code> at the beginning, e.g. <code>t128</code></p>
 		<script type="text/javascript"><!--
 google_ad_client = "ca-pub-4316637065076563";
