--- a/src/content/index.html
+++ b/src/content/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Enter a hex, color, or decimal value into the url hash to see conversions."/> 
 		<title>hexpl.us: color and hex lookup by url</title> 
 		<link rel="shortcut icon" type="image/png" href="$CONF_media_loc/images/favicon.png">
-		<link type="text/css" rel="stylesheet" href="$CONF_media_loc/css/hex.css"/>
+		<link type="text/css" rel="stylesheet" href="$CONF_media_loc/css/app-$CONF_version_name.css"/>
 	</head> 
 	<body>
 		<h1>hexpl.us</h1>
