added octal support, better casing

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -19,11 +19,14 @@
 			</li><li>
 			<label for="decimal">Decimal:</label> <span id="decimal"></span>
 			</li><li>
+			<label for="oct">Octal:</label> <span id="oct"></span>
+			</li><li>
 			<label for="rgb">RGB:</label> <span id="rgb"></span>
 			</li>
 		</ul>
 		<p>Link to this: <a id="lookupUrl" href="http://hexpl.us">http://hexpl.us</a></p>
-		<p>Look up decimal values by putting a <code>t</code> at the beginning, e.g. <code>t128</code></p>
+		<p>Convert from decimal: put <code>t</code> at the beginning, e.g. <code>t128</code></p>
+		<p>Convert from octal: put <code>o</code> at the beginning, e.g. <code>o265</code></p>
 		<script type="text/javascript"><!--
 google_ad_client = "ca-pub-4316637065076563";
 /* mainAds */
