better identity display

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -25,8 +25,10 @@
 			</li>
 		</ul>
 		<p>Link to this: <a id="lookupUrl" href="http://hexpl.us">http://hexpl.us</a></p>
-		<p>Convert from decimal: put <code>t</code> at the beginning, e.g. <code>t128</code></p>
-		<p>Convert from octal: put <code>o</code> at the beginning, e.g. <code>o265</code></p>
+		<ul>
+			<li>Convert from decimal: put <code>t</code> at the beginning, e.g. <code>t128</code></li>
+			<li>Convert from octal: put <code>o</code> at the beginning, e.g. <code>o265</code></li>
+		</ul>
 		<script type="text/javascript"><!--
 google_ad_client = "ca-pub-4316637065076563";
 /* mainAds */
